Also prevent hover flicker on disabled button

--- a/frontend/src/Components/App.module.css
+++ b/frontend/src/Components/App.module.css
@@ -56,7 +56,3 @@
   outline: 0.125rem solid var(--light-blue);
   outline-offset: 0.125rem;
 }
-
-:global input[type='submit']:disabled {
-  border-color: var(--tng-gray);
-}
